@@ -447,7 +447,7 @@ index 77b438f..93d4105 100644
  
  #include "qaudioinput_pulse.h"
  #include "qaudiodeviceinfo_pulse.h"
-@@ -118,32 +119,6 @@ static void inputStreamSuccessCallback(pa_stream *stream, int success, void *use
+@@ -118,39 +119,12 @@ static void inputStreamSuccessCallback(pa_stream *stream, int success, void *use
      pa_threaded_mainloop_signal(pulseEngine->mainloop(), 0);
  }
  
@@ -480,11 +480,19 @@ index 77b438f..93d4105 100644
  QPulseAudioInput::QPulseAudioInput(const QByteArray &device)
      : m_totalTimeValue(0)
      , m_audioSource(0)
-@@ -356,8 +330,6 @@ bool QPulseAudioInput::open()
+     , m_errorState(QAudio::NoError)
+     , m_deviceState(QAudio::StoppedState)
+     , m_volume(qreal(1.0f))
+-    , m_customVolumeRequired(false)
+     , m_pullMode(true)
+     , m_opened(false)
+     , m_bytesAvailable(0)
+@@ -356,9 +330,6 @@ bool QPulseAudioInput::open()
      if (actualBufferAttr->tlength != (uint32_t)-1)
          m_bufferSize = actualBufferAttr->tlength;
  
--    setPulseVolume();
+-    if (m_customVolumeRequired)
+-        setPulseVolume();
 -
      pulseEngine->unlock();
  
@@ -569,13 +577,14 @@ index 77b438f..93d4105 100644
  void QPulseAudioInput::resume()
  {
      if (m_deviceState == QAudio::SuspendedState || m_deviceState == QAudio::IdleState) {
-@@ -567,29 +525,17 @@ void QPulseAudioInput::resume()
+@@ -567,30 +525,17 @@ void QPulseAudioInput::resume()
  
  void QPulseAudioInput::setVolume(qreal vol)
  {
 -    if (vol >= 0.0 && vol <= 1.0) {
 -        QPulseAudioEngine *pulseEngine = QPulseAudioEngine::instance();
 -        pulseEngine->lock();
+-        m_customVolumeRequired = true;
 -        if (!qFuzzyCompare(m_volume, vol)) {
 -            m_volume = vol;
 -            if (m_opened) {
@@ -608,15 +617,16 @@ diff --git a/src/plugins/pulseaudio/qaudioinput_pulse.h b/src/plugins/pulseaudio
 index 7b898c4..c130f8c 100644
 --- a/src/plugins/pulseaudio/qaudioinput_pulse.h
 +++ b/src/plugins/pulseaudio/qaudioinput_pulse.h
-@@ -100,7 +100,6 @@ public:
+@@ -100,8 +100,6 @@ public:
      QAudio::Error m_errorState;
      QAudio::State m_deviceState;
      qreal m_volume;
+-    bool m_customVolumeRequired;
 -    pa_cvolume m_chVolume;
  
  private slots:
      void userFeed();
-@@ -112,15 +110,14 @@ private:
+@@ -112,13 +110,11 @@ private:
      void setState(QAudio::State state);
      void setError(QAudio::Error error);
  
@@ -626,9 +636,7 @@ index 7b898c4..c130f8c 100644
      bool open();
      void close();
 -    void setPulseVolume();
- 
-     static QMap<void *, QPulseAudioInput*> s_inputsMap;
- 
+-
 -    static void sourceInfoCallback(pa_context *c, const pa_source_info *i, int eol, void *userdata);
 -    static void inputVolumeCallback(pa_context *context, int success, void *userdata);
  
