@@ -7,6 +7,8 @@ qtmultimedia-opensource-src (5.6.0-0ubuntu1) UNRELEASED; urgency=medium
     - Change-the-way-a-playlist-is-bound-to-a-media-object.patch
   * Drop unneeded Ubuntu specific patch.
   * Update symbols.
+  * debian/patches/PulseAudio-change-the-way-volume-is-applied.patch:
+    - Use upstream version instead of the backported to 5.5 version.
 
  -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Thu, 28 Jan 2016 10:28:53 +0000
 
